--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,37 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+
+    
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyAfJSRv57znqp4qICufjRRDIZdugAnzMx0",
+    authDomain: "todo-4823d.firebaseapp.com",
+    projectId: "todo-4823d",
+    storageBucket: "todo-4823d.appspot.com",
+    messagingSenderId: "17402300541",
+    appId: "1:17402300541:web:66f1bf9d76aa18ff0fc914",
+    measurementId: "G-C8JMVKZSZP"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
   </body>
 </html>
